Fixed WRAP download images
Shadow wasn't consistent compared to other WRAP icons

--- a/css/plugins/wrap.less
+++ b/css/plugins/wrap.less
@@ -5,6 +5,18 @@ div.plugin_wrap {
   margin-bottom: @ini_spacer !important;
 }
 
+.dokuwiki div.wrap_download {
+    background-image: url(lib/tpl/namespaced/images/replacements/blockquote/blockquote.png);
+}
+
+.dokuwiki div.wrap_download {
+  background-image: url(images/replacements/wrap/download_48.png);
+}
+
+.dokuwiki span.wrap_download {
+  background-image: url(images/replacements/wrap/download_16.png);
+}
+
 [dir=ltr] .dokuwiki div.wrap_info,
 [dir=ltr] .dokuwiki div.wrap_important,
 [dir=ltr] .dokuwiki div.wrap_alert,
